2013-01-09 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Call directly rotate byAngle method, so that redrawing twice is avoided.

2013-01-09 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Separate rotation method from actions.

2013-01-08 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Remember image rotation

2013-01-08 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Invoke correct method.

2013-01-08 Riccardo Mottola <rm@gnu.org>

	* LMImage.h
	* LMImage.m
	New class to hold specific image information.

	* AppController.m
	* FileTable.h
	* FileTable.m
	* GNUMakefile
	Use the new LMImage class to hold information instead of several arrays.

2013-01-04 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Make "Add" work recursively again.

	* FileTable.h
	* FileTable.m
	Extract recursive path search into a method.

2013-01-01 Riccardo Mottola <rm@gnu.org>

	* FileTable.m
	Make the files to ignore list an array, no not accept unwanted files during drop validation.

2012-12-31 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* FileTable.m
	Move directory recursion to FileTable class, accept directories in drag&drop.

2012-12-25 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* FileTable.m
	Table drag-target, for files only.

2012-12-24 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	GS key-window hack, for GWorkspace cooperation

2012-04-17 Riccardo Mottola <rm@gnu.org>

	* FileTable.m
	Fix random generator to work in the [0, count) range

2012-04-17 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Fix wrong type.

2011-08-25 Riccardo Mottola <rm@gnu.org>

	* AppController.m:
	Set random seed

	* LMFlipView.m:
	Recognize space as next

2011-08-10 Riccardo Mottola <rm@gnu.org>

	* FileTable.[h,m]
	* AppController.[h,m]
	* English.lproj/LaternaMagica.nib
	Scramble list.

2011-01-27 Riccardo Mottola <rm@gnu.org>
	* AppController.h
	* AppController.m
	* English.lproj/LaternaMagica.nib
	clear list command.

2011-01-22 Riccardo Mottola <rm@gnu.org>